<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TransWind</string>
    <string name="action_settings">Settings</string>
    <string name="phonenum_hint">请输入手机号码</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="findback">找回密码</string>
    <string name="title">Title</string>
    <string name="verificate_hint">请输入验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="password_confirm_hint">请再次输入密码</string>
    <string name="regist_hint">注册</string>
    <string name="reset_hint">请输入新密码</string>
    <string name="reset_confirm_hint">请确认新密码</string>
    <string name="reset">重置</string>
    <string name="spinner_hint">请选择用户类型</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="language_market">语言集市</string>
    <string name="talent">人才智库</string>
    <string name="competition">竞技场</string>
    <string name="bbs">线上论坛</string>
    <string name="readevery">每日精选</string>
    <string name="login_phonenum_hint">手机</string>
    <string name="login_password_hint">密码</string>
    <string name="sms_login">—  短信登录  —</string>
    <string name="yes_hint">我已经看过并同意《用户使用协议》</string>
    <string name="regist_phonenum_hint">请输入手机号码</string>
    <string name="regist_password_hint">请输入密码(6~15位)</string>
    <string name="login_out">退出登录</string>
    <string name="selected_read">精品阅读</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="change_phonenum">换绑手机</string>
    <string name="modify_password">修改密码</string>
    <string name="personal_info">个人信息</string>
    <string name="share">分享好友</string>
    <string name="send">发送</string>
    <string name="feedback_hint">请留下您的宝贵意见和建议，我们将努力改进，谢谢！</string>
    <string name="modify_hint">请输入旧密码</string>
    <string name="modify">修改</string>

</resources>
