<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:contentDescription="@null" />

        <EditText
            android:id="@+id/edittext_login_phonenum"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/phonenum_hint"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edittext_login_password"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login_login"
            style="@style/ButtonStyle"
            android:layout_marginTop="10dp"
            android:text="@string/login" />
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp" >
        
        <TextView
            android:id="@+id/txt_login_findback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/findback" />
        
        <TextView
            android:id="@+id/txt_login_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/regist" />
        
    </RelativeLayout>

</RelativeLayout>