<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/include_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edt_regist_phonenum"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/phonenum_hint"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edt_regist_password"
                style="@style/EditTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edt_regist_password_confirm"
                style="@style/EditTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/password_confirm_hint"
                android:inputType="textPassword" />

            <Spinner
                android:id="@+id/spn_regist_user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:background="@drawable/spinner"
                android:spinnerMode="dialog"
                android:prompt="@string/spinner_hint"
                android:entries="@array/user_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_regist_verificate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/edittext"
                    android:hint="@string/verificate_hint"
                    android:inputType="number"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txt_regist_get_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingTop="5dp"
                    android:text="@string/get_verification"
                    android:textSize="19sp" />
            </LinearLayout>
            
            <Button
                android:id="@+id/btn_regist_regist"
                style="@style/ButtonStyle"
                android:layout_marginTop="10dp"
                android:text="@string/regist_hint" />
            
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>