<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/include_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edt_reset_password"
                style="@style/EditTextStyle"
                android:hint="@string/reset_hint"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edt_reset_password_confirm"
                style="@style/EditTextStyle"
                android:layout_marginTop="10dp"
                android:hint="@string/reset_confirm_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_reset_reset"
                style="@style/ButtonStyle"
                android:layout_marginTop="10dp"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>