<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/include_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edt_findback_phonenum"
                style="@style/EditTextStyle"
                android:hint="@string/phonenum_hint"
                android:inputType="phone" >
                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_findback_verificate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/edittext"
                    android:hint="@string/verificate_hint"
                    android:inputType="number"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txt_findback_get_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingTop="5dp"
                    android:text="@string/get_verification"
                    android:textSize="19sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_findback_findback"
                style="@style/ButtonStyle"
                android:layout_marginTop="10dp"
                android:text="@string/findback" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>